--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .
-          pip install -r dev_requirements.txt; fi
+          pip install -r dev_requirements.txt
 
       - name: Run tests
         run: |
